Kubernetes/manifests/deployment.yaml
# This is a sample deployment manifest file for a simple web application.
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-go-app
  labels:
    app: simple-go-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: simple-go-app
  template:
    metadata:
      labels:
        app: simple-go-app
    spec:
      containers:
      - name: simple-go-app
        image: ybharamb/simple-go-app:latest
        ports:
        - containerPort: 8080
