Kubernetes/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: simple-go-app-service
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: NodePort
  selector:
    app.kubernetes.io/name: simple-go-app
